--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Main": "Главная",
   "About": "О сайте",
   "translate": "to english",
-  "toggle": "toggle"
+  "toggle": "переключить",
+  "Not found data": "Данные не найдены"
 }
