--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "About": "About",
   "translate": "на русский",
   "toggle": "toggle",
-  "Not found data": "Not found data"
+  "Not found data": "Not found data",
+  "Что-то пошло не так": "Something wrong",
+  "reload page": "reload page"
 }
