--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -1,4 +1,5 @@
 {
   "Main": "Главная",
-  "Main content": "Основной контент"
+  "Main content": "Основной контент",
+  "getError": "Вызываем ошибку"
 }
