--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "About": "О сайте",
   "translate": "to english",
   "toggle": "переключить",
-  "Not found data": "Данные не найдены"
+  "Not found data": "Данные не найдены",
+  "Что-то пошло не так": "Что-то пошло не так",
+  "reload page": "Обновить страницу"
 }
