--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "Что-то пошло не так": "Something wrong",
   "reload page": "reload page",
   "translate": "на русский",
-  "translate_short": "Рус"
+  "translate_short": "Рус",
+  "Enter": "Enter"
 }
