--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "Что-то пошло не так": "Что-то пошло не так",
   "reload page": "Обновить страницу",
   "translate": "to english",
-  "translate_short": "EN"
+  "translate_short": "EN",
+  "Enter": "Войти"
 }
