--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -1,5 +1,7 @@
 {
   "Main": "Главная",
   "Main content": "Основной контент",
-  "getError": "Вызываем ошибку"
+  "getError": "Вызываем ошибку",
+  "placeholer": "placeholer",
+  "placeholder": "placeholder"
 }
