37 профайл страница, интерфейсы, фикс работы модалки - закрытие при выходе

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,6 @@
   "Uncorrected username or password": "Uncorrected username or password",
   "Enter password": "Enter password",
   "Enter username": "Enter username",
-  "Logout": "Logout"
+  "Logout": "Logout",
+  "Profile": "Profile"
 }
