--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,6 @@
   "Uncorrected username or password": "Невеный логин или пароль",
   "Enter password": "Введите пароль",
   "Enter username": "Введите логин",
-  "Logout": "Выйти"
+  "Logout": "Выйти",
+  "Profile": "Профайл"
 }
