41 avatar, select, countryselect, currencyselect and many many

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,6 @@
 {
   "ProfilePage": "Profile Page",
   "Profile": "Profile",
-  "edit": "edit"
+  "edit": "edit",
+  "An error occurred": "An error occurred"
 }
