--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,5 +1,6 @@
 {
   "ProfilePage": "страница профиля",
   "Profile": "Профиль",
-  "edit": "изменить"
+  "edit": "изменить",
+  "An error occurred": "An error occurred"
 }
