--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,9 @@
   "ProfilePage": "страница профиля",
   "Profile": "Профиль",
   "edit": "изменить",
-  "An error occurred": "An error occurred"
+  "An error occurred": "An error occurred",
+  "Server error": "Server error",
+  "Incorrect user data": "Incorrect user data",
+  "Incorrect city": "Incorrect city",
+  "Incorrect age": "Incorrect age"
 }
