48 страницы статьи, статья, правка вебпака

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,6 @@
   "Enter password": "Enter password",
   "Enter username": "Enter username",
   "Logout": "Logout",
-  "Profile": "Profile"
+  "Profile": "Profile",
+  "Articles": "Articles"
 }
