--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,6 @@
   "Enter password": "Введите пароль",
   "Enter username": "Введите логин",
   "Logout": "Выйти",
-  "Profile": "Профайл"
+  "Profile": "Профайл",
+  "Articles": "Статьи"
 }
