51 Модуль комментариев. Нормализация данных. EntityAdapter

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,3 +1,5 @@
 {
-  "Article not found": "Article not found"
+  "Article not found": "Article not found",
+  "Error loading article": "Error loading article",
+  "Comments": "Comments"
 }
