--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,7 @@
   "Enter username": "Введите логин",
   "Logout": "Выйти",
   "Profile": "Профайл",
-  "Articles": "Статьи"
+  "Articles": "Статьи",
+  "Copy": "Скопировать",
+  "Comments not found": "Коментарии не найдены"
 }
