--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,6 @@
   "Profile": "Profile",
   "Articles": "Articles",
   "Copy": "Copy",
-  "Comments not found": "Comments not found"
+  "Comments not found": "Comments not found",
+  "comment": "comment"
 }
