--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
   "Profile": "Профайл",
   "Articles": "Статьи",
   "Copy": "Скопировать",
-  "Comments not found": "Коментарии не найдены"
+  "Comments not found": "Коментарии не найдены",
+  "comment": "comment"
 }
