114 попилил тест где обновляем данные, поправил профайл, чтобы был в режиме просмотра после загрузки, опять правки по LF,

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -2,5 +2,7 @@
   "Main": "Main",
   "Main content": "Main content",
   "getError": "fire Error event",
-  "placeholder": "placeholder"
+  "placeholder": "placeholder",
+  "How are you the article": "How are you the article",
+  "send feedback about article": "send feedback about article"
 }
