--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,15 @@
   "Articles": "Articles",
   "Copy": "Copy",
   "Comments not found": "Comments not found",
-  "comment": "comment"
+  "comment": "comment",
+  "cancel": "cancel",
+  "save": "save",
+  "edit": "edit",
+  "FrontPro": "FrontPro",
+  "Create article": "Create article",
+  "select country": "select country",
+  "Enter country": "Enter country",
+  "Enter curency": "Enter curency",
+  "Enter currency": "Enter currency",
+  "Admin": "Admin"
 }
