--- a/public/locales/ru/main.json
+++ b/public/locales/ru/main.json
@@ -2,5 +2,7 @@
   "Main": "Главная",
   "Main content": "Основной контент",
   "getError": "Вызываем ошибку",
-  "placeholder": "placeholder"
+  "placeholder": "placeholder",
+  "How are you the article": "How are you the article",
+  "send feedback about article": "send feedback about article"
 }
