114 добавил тесты с выбором количества звезд, добавил команд

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,7 @@
   "Enter country": "Enter country",
   "Enter curency": "Enter curency",
   "Enter currency": "Enter currency",
-  "Admin": "Admin"
+  "Admin": "Admin",
+  "Cancel": "Cancel",
+  "Send": "Send"
 }
